--- a/block/test/cardano-sl-block-test.cabal
+++ b/block/test/cardano-sl-block-test.cabal
@@ -29,6 +29,7 @@ library
                      , cardano-sl-crypto-test
                      , cardano-sl-db
                      , cardano-sl-delegation
+                     , cardano-sl-delegation-test
                      , cardano-sl-infra
                      , cardano-sl-lrc
                      , cardano-sl-lrc-test
