--- a/lib/cardano-sl.cabal
+++ b/lib/cardano-sl.cabal
@@ -309,6 +309,7 @@ test-suite cardano-test
                      , cardano-sl-crypto-test
                      , cardano-sl-db
                      , cardano-sl-delegation
+                     , cardano-sl-delegation-test
                      , cardano-sl-infra
                      , cardano-sl-lrc
                      , cardano-sl-lrc-test
