--- a/lib/cardano-sl.cabal
+++ b/lib/cardano-sl.cabal
@@ -76,6 +76,8 @@ library
                         -- Utilities/helpers
                         Pos.Util.Config
                         Pos.Util.OutboundQueue
+                        Pos.Util.UserKeyError
+                        Pos.Util.UserPublic
                         Pos.Util.UserSecret
 
                         Pos.Web
