--- a/crypto/cardano-sl-crypto.cabal
+++ b/crypto/cardano-sl-crypto.cabal
@@ -41,6 +41,7 @@ library
 
   build-depends:       aeson
                      , base
+                     , base58-bytestring
                      , binary
                      , bytestring
                      , cardano-crypto
