--- a/wallet-new/cardano-sl-wallet-new.cabal
+++ b/wallet-new/cardano-sl-wallet-new.cabal
@@ -117,8 +117,10 @@ library
                      , beam-migrate
                      , beam-sqlite
                      , bytestring
+                     , cardano-crypto
                      , cardano-sl
                      , cardano-sl-block
+                     , cardano-sl-binary
                      , cardano-sl-client
                      , cardano-sl-core
                      , cardano-sl-crypto
