--- a/lib/cardano-sl.cabal
+++ b/lib/cardano-sl.cabal
@@ -405,9 +405,11 @@ benchmark cardano-bench-criterion
                      , bytestring
                      , cardano-sl
                      , cardano-sl-block
+                     , cardano-sl-block-test
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-crypto-test
+                     , cardano-sl-db
                      , cardano-sl-infra
                      , cardano-sl-lrc
                      , cardano-sl-networking
